--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tutorial",
+  "name": "mypetdesktop",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "",
   "devDependencies": {
     "electron": "^20.1.3",
     "electron-packager": "^16.0.0"
