--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "electron": "^20.1.3",
     "electron-packager": "^16.0.0"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
