--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "electron-packager": "^16.0.0"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "dexie": "^3.2.3"
   }
 }
