--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "dexie": "^3.2.3"
+    "dexie": "^3.2.3",
+    "mongo-objectid": "^1.2.2",
+    "uuidv4": "^6.2.13"
   }
 }
